# pydolarvenezuela

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test.py  vercel.json
.github/: FUNDING.yml
pyDolarVenezuela/: __init__.py  dollar_price.py  exceptions.py  functionstime.py  models.py  module_bcv.py  modulebcv.py  network.py  pages.py  provider.py  request.py  scraping_bcv.py  scraping_monitor.py  scrapmonitor.py  storage.py  timezone.py  util.py  utils.py  version.py
pyDolarVenezuela/calculator/: __init__.py  function.py
pyDolarVenezuela/data/: __init__.py  engine.py  main.py  models.py  redis.py
pyDolarVenezuela/models/: database.py  images.py  monitor.py  pages.py
pyDolarVenezuela/module/: __init__.py  dollar.py
pyDolarVenezuela/provider/: __init__.py  alcambio.py  bcv.py  criptodolar.py  dpedidos.py  exchangemonitor.py  italcambio.py  ivenezuela.py
pyDolarVenezuela/providers/: __init__.py  _base.py  alcambio.py  bcv.py  criptodolar.py  dolartoday.py  enparalelovzla.py  exchangemonitor.py  italcambio.py
pyDolarVenezuela/router/: app.py
pyDolarVenezuela/time/: __init__.py  functions.py
pyDolarVenezuela/tools/: __init__.py  calculator.py  time.py
pyDolarVenezuela/utils/: calculator.py  common.py  extras.py  time.py
scripts/upload/: main.py  manifest.py  towebp.bat
