[project]
name = "pyDolarVenezuela"
version = "1.3.8"
authors = [
  { name="Francisco Griman", email="grihardware@gmail.com" },
]
description = "esta es una librería en python que te permite consultar los precios del dólar en diferentes monitores en Venezuela y el dolar oficial BCV."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "dolarmonitor",
    "dolartoday",
    "enparalelovzla",
    "bcv",
    "venezuela"
]
dependencies = [
      'requests',
      'curl_cffi',
      'bs4',
      'beautifulsoup4',
      'babel',
      'colorama',
      'pytz'
      ]

[project.urls]
"Homepage" = "https://github.com/fcoagz/pydolarvenezuela"
"Bug Tracker" = "https://github.com/fcoagz/pydolarvenezuela/issues"