[project]
name = "pyDolarVenezuela"
version = "1.6.1"
dependencies = [
  "requests",
  "curl_cffi",
  "beautifulsoup4",
  "babel",
  "pytz",
  "colorama",
  "redis",
]
requires-python = ">=3.9"
authors = [
  {name = "Francisco Griman", email = "grihardware@gmail.com"}
]
description = "Esta librería en Python consulta los precios del dólar y/o euro en diversos monitores en Venezuela, además de la tasa de cambio oficial BCV."
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
  "dolarmonitor",
  "dolartoday",
  "enparalelovzla",
  "bcv",
  "venezuela",
  "dolarparalelo",
  "dolarcambio",
  "dolarvenezuela",
  "dolartodayvenezuela",
  "dolaroficial",
  "dolarlibre",
  "dolarinformal",
  "dolarparalelovzla",
  "dolarbcv",
  "dolarenvenezuela"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/fcoagz/pydolarvenezuela"
"Bug Tracker" = "https://github.com/fcoagz/pydolarvenezuela/issues"